# simple_scintillator_simulation

./: .gitignore  CMakeLists.txt  configure.cmake  draw_summary.C  draw_test.C  execute.cc  run_test.mac  run_test.vis  run_vis.mac  vis_test.mac
ncsubmit/: .gitignore  draw_proton_searching_crosssection_angle.C  fit_phi.C  get_proton_cross_section.C  make_proton_searching_crosssection_angle.C  make_proton_searching_crosssection_uniform_angle.C  make_single_neutron_center.C  make_wall.C  make_wall_and_gamma.C  make_wall_and_proton.C  proton_crosssection.C
src/: TDetectorConstruction.cc  TDetectorConstruction.hh  TEventAction.cc  TEventAction.hh  TMagneticField.cc  TMagneticField.hh  TMessenger.cc  TMessenger.hh  TPrimaryGeneratorAction.cc  TPrimaryGeneratorAction.hh  TRunAction.cc  TRunAction.hh  TRunManager.cc  TRunManager.hh  TSteppingAction.cc  TSteppingAction.hh  TTrackingAction.cc  TTrackingAction.hh  TWallDetector.cc  TWallDetector.hh
